[package]
name = "example-03-webserver"
version = "0.1.0"
authors = ["root"]

[dependencies]
futures = "0.1.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
